<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.nhtuan10</groupId>
        <artifactId>modular</artifactId>
        <version>0.0.3-jdk8</version>
    </parent>

    <artifactId>modular-impl</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <classgraphVersion>4.8.179</classgraphVersion>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.github.nhtuan10</groupId>
            <artifactId>modular-api</artifactId>
            <version>${version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>${classgraphVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.3.15</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.16.0</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>commons-codec</groupId>-->
        <!--            <artifactId>commons-codec</artifactId>-->
        <!--            <version>1.22.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
        <!--            <artifactId>jackson-dataformat-smile</artifactId>-->
        <!--            <version>2.16.0</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>com.esotericsoftware.kryo</groupId>
            <artifactId>kryo5</artifactId>
            <version>5.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-depchain</artifactId>
            <version>3.1.4</version>
            <scope>compile</scope>
            <type>pom</type>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>1.18.8</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.21.4</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                    <!--                    <compilerArgs>-->
                    <!--                        <arg>&#45;&#45;add-modules</arg>-->
                    <!--                        <arg>ALL-MODULE-PATH</arg>-->
                    <!--                    </compilerArgs>-->
                    <!--                    <compilerArgs>-->
                    <!--                        <arg>&#45;&#45;add-reads</arg>-->
                    <!--                        <arg>io.github.nhtuan10.modular.impl=ALL-UNNAMED</arg>-->
                    <!--                    </compilerArgs>-->
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-shade-plugin</artifactId>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>shade</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <relocations>-->
            <!--                                <relocation>-->
            <!--                                    &lt;!&ndash; The original package name you want to change &ndash;&gt;-->
            <!--                                    <pattern>org.apache.commons.lang3</pattern>-->
            <!--                                    &lt;!&ndash; The new package destination name &ndash;&gt;-->
            <!--                                    <shadedPattern>io.github.nhtuan10.org.apache.commons.lang3</shadedPattern>-->
            <!--                                </relocation>-->
            <!--                            </relocations>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
        </plugins>
    </build>

</project>